# process_3D_position

./: README.md  requirement.txt
data_processing/: CMakeLists.txt  package.xml
data_processing/data/: color.csv  scale.csv
data_processing/include/: ObjectCreator.h  areaMaker.h  objectCreator.h  vectors.h
data_processing/launch/: GL_run.launch  data_processing.launch  run.launch
data_processing/meshes/: simplist_wheelchair.dae  wheelchair_simplist.dae
data_processing/msg/: BboxMsg.msg  CameraMsg.msg  ObjectMsg.msg  ObjectsMsg.msg  PointMsg.msg  PostObjectMsg.msg
data_processing/scripts/: animated3Dplot.py  areaMaker.py  d435.py  extract_video.py  mesh_shower.py  object_creator.py  object_detector_sim.py  sort_3d.py  spacialize.py  t265.py  t265_sim.py  visualizer.py  yolomad_sim.py
data_processing/scripts/output/: out.txt
data_processing/src/: ObjectCreator.cpp  areaMaker.cpp  objectCreator.cpp
yolo_madnet/: CMakeLists.txt  package.xml
yolo_madnet/launch/: yolo_madnet.launch
yolo_madnet/msg/: BboxMsg.msg  DetectionMsg.msg  DisparityMsg.msg  PointMsg.msg
yolo_madnet/scripts/: README.md  create_annotation.py  detection.py  feed_img_files.py  madnet.py  post_process.py  run.py  run.sh  yolov3.py
yolo_madnet/scripts/adapt/: README.md  adapt.names  yolov3-adapt.cfg
yolo_madnet/scripts/sort/: Sort3D.py  sort_3d.py
yolo_madnet/scripts/sort/utils/: object_segmentation.py  utils.py
